# PRI-project

./: README.md  docker-compose.yaml
app/: .env  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
app/_todo_copyfiles_into_ui_folder/: Dockerfile
app/frontend/: outputfile.html  package.json  pnpm-lock.yaml  wikicode.txt
app/python_backend/: Dockerfile  README.md  pyproject.toml
app/python_backend/app/: __init__.py
app/ui/: Dockerfile  package.json  pnpm-lock.yaml
app_2/: package.json
datasets/: EU country codes.xlsx  NEW - Universities.xlsx  cleaned_full_list.csv  full_list.csv  full_list.xlsx  wikidata_for_all_universities.xlsx
docs/milestone_2/: demo-73.pptx
final/: 02_get_uni_city_coords_and_page_data.py
final/datasets/: 00_eu_country_codes.csv
milestone_1/datasets/: 00_eu_country_codes.csv  01_Universities_ranking_filtered_renamed.csv  02_Universities_with_wikidata.csv
milestone_1/final/: makefile  (+2 more)
milestone_2/: demo_evaluation.ipynb  new_schema.json  solar_commands.md  startup.sh  uni_schema.json
milestone_3/: Dockerfile  Dockerfile_setup  bash_startup.sh  docker_startup.sh  improved_uni_schema.json
scripts/: 01_get_basic_uni_data_from_wikidata.py  02_get_wikipedia_page_data.py  03_get_uni_city_page_data.py  convert_to_csv.py  demo_evaluation.ipynb  exploratory_analysis.ipynb  filter.py  get_correct_names.py  get_data.py  get_wiki_text.py  main.ipynb  search wikipedia.py
visualization/: find_uni_city_names.py  get_bar_charts.py  ngrams_analysis.ipynb  rank_chart.py  total_uni_vs_eur_uni.py  unis_per_country_bar_chart.py
(+44 files in other folders)
